[gd_scene load_steps=4 format=3 uid="uid://dtrv3peg2hcf5"]

[ext_resource type="Script" uid="uid://cpbg3ebm3gge6" path="res://set_selector/set_seleccionable/set_seleccionable.gd" id="1_2jlwn"]
[ext_resource type="PackedScene" uid="uid://b6mjda2nau3xk" path="res://mostrador_set/ficha_set_mostrador/ficha_set_mostrador.tscn" id="2_wiia1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wiia1"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="SetSeleccionable" type="Panel"]
clip_contents = true
custom_minimum_size = Vector2(200, 570)
offset_right = 200.0
offset_bottom = 600.0
script = ExtResource("1_2jlwn")
ficha_set_mostrador_resource = ExtResource("2_wiia1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 4

[node name="NombreSetLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Nombre}}"

[node name="SetVBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 2

[node name="SetSeleccionableBoton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_wiia1")

[connection signal="pressed" from="SetSeleccionableBoton" to="." method="_on_set_seleccionable_boton_pressed"]
